--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,52 @@
-.next
+# Dependencies
 node_modules
-npm-debug.log
-Dockerfile
-.dockerignore
-.git
-.gitignore
-README.md
-.env
-.env.local
-.env.production
-.env.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Next.js
+.next/
+out/
+build
+
+# Environment files
+.env*
+!.env.example
+
+# Vercel
 .vercel
-.DS_Store
-*.log
+
+# Testing
 coverage
 .nyc_output
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local
+.vscode
+.idea
+
+# Git
+.git
+.gitignore
+
+# Docker
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# Documentation
+README.md
+docs/
+
+# Logs
+logs
+*.log
